blackfriday_sale:v1.3 clstag

--- a/overseas/blackfriday/sale_en.html
+++ b/overseas/blackfriday/sale_en.html
@@ -471,14 +471,14 @@
                     <ul class="goods-list" marketStart="0" marketLength="6" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c36e4295.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="295" height="295"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|3_{#order#}"><img src="{#image#}" width="295" height="295"></a>
                         <em><span class="goods-discount-no">{#defined2#}</span><span class="goods-discount-off">OFF</span></em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|3_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">BUY NOW</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|3_{#order#}">BUY NOW</a>
                             <span>SOLD OUT</span>
                         </div>
                     </div>
@@ -489,14 +489,14 @@
                     <ul class="goods-list" marketStart="6" marketLength="" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c36e4295.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="210" height="210"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|4_{#order#}"><img src="{#image#}" width="210" height="210"></a>
                         <em><span class="goods-discount-no">{#defined2#}</span><span class="goods-discount-off">OFF</span></em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|4_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">BUY NOW</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|4_{#order#}">BUY NOW</a>
                             <span>SOLD OUT</span>
                         </div>
                     </div>
@@ -513,14 +513,14 @@
                     <ul class="goods-list" marketStart="0" marketLength="6" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c435e729.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="295" height="295"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|5_{#order#}"><img src="{#image#}" width="295" height="295"></a>
                         <em><span class="goods-discount-no">{#defined2#}</span><span class="goods-discount-off">OFF</span></em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|5_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">BUY NOW</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|5_{#order#}">BUY NOW</a>
                             <span>SOLD OUT</span>
                         </div>
                     </div>
@@ -531,14 +531,14 @@
                     <ul class="goods-list" marketStart="6" marketLength="" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c435e729.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="210" height="210"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|6_{#order#}"><img src="{#image#}" width="210" height="210"></a>
                         <em><span class="goods-discount-no">{#defined2#}</span><span class="goods-discount-off">OFF</span></em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|6_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">BUY NOW</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|6_{#order#}">BUY NOW</a>
                             <span>SOLD OUT</span>
                         </div>
                     </div>
@@ -555,14 +555,14 @@
                     <ul class="goods-list" marketStart="0" marketLength="6" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c526095a.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="295" height="295"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|7_{#order#}"><img src="{#image#}" width="295" height="295"></a>
                         <em><span class="goods-discount-no">{#defined2#}</span><span class="goods-discount-off">OFF</span></em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|7_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">BUY NOW</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|7_{#order#}">BUY NOW</a>
                             <span>SOLD OUT</span>
                         </div>
                     </div>
@@ -573,14 +573,14 @@
                     <ul class="goods-list" marketStart="6" marketLength="" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c526095a.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="210" height="210"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|8_{#order#}"><img src="{#image#}" width="210" height="210"></a>
                         <em><span class="goods-discount-no">{#defined2#}</span><span class="goods-discount-off">OFF</span></em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|8_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">BUY NOW</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|8_{#order#}">BUY NOW</a>
                             <span>SOLD OUT</span>
                         </div>
                     </div>
@@ -597,14 +597,14 @@
                     <ul class="goods-list" marketStart="0" marketLength="6" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c69e7a86.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="295" height="295"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|9_{#order#}"><img src="{#image#}" width="295" height="295"></a>
                         <em><span class="goods-discount-no">{#defined2#}</span><span class="goods-discount-off">OFF</span></em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|9_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">BUY NOW</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|9_{#order#}">BUY NOW</a>
                             <span>SOLD OUT</span>
                         </div>
                     </div>
@@ -615,14 +615,14 @@
                     <ul class="goods-list" marketStart="6" marketLength="" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c69e7a86.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="210" height="210"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|10_{#order#}"><img src="{#image#}" width="210" height="210"></a>
                         <em><span class="goods-discount-no">{#defined2#}</span><span class="goods-discount-off">OFF</span></em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|10_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">BUY NOW</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511255|10_{#order#}">BUY NOW</a>
                             <span>SOLD OUT</span>
                         </div>
                     </div>
