--- a/overseas/blackfriday/sale_ru.html
+++ b/overseas/blackfriday/sale_ru.html
@@ -401,14 +401,14 @@
                     <ul class="goods-list" marketStart="0" marketLength="6" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556be236059.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="295" height="295"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|3_{#order#}"><img src="{#image#}" width="295" height="295"></a>
                         <em>-{#defined2#}</em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|3_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">Купить сейчас</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|3_{#order#}">Купить сейчас</a>
                             <span>Продано</span>
                         </div>
                     </div>
@@ -542,14 +542,14 @@
                     <ul class="goods-list" marketStart="6" marketLength="" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556be236059.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="210" height="210"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|4_{#order#}"><img src="{#image#}" width="210" height="210"></a>
                         <em>-{#defined2#}</em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|4_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">Купить сейчас</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|4_{#order#}">Купить сейчас</a>
                             <span>Продано</span>
                         </div>
                     </div>
@@ -568,14 +568,14 @@
                     <ul class="goods-list" marketStart="0" marketLength="6" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556bf3600f6.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="295" height="295"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|5_{#order#}"><img src="{#image#}" width="295" height="295"></a>
                         <em>-{#defined2#}</em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|5_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">Купить сейчас</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|5_{#order#}">Купить сейчас</a>
                             <span>Продано</span>
                         </div>
                     </div>
@@ -586,14 +586,14 @@
                     <ul class="goods-list" marketStart="6" marketLength="" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556bf3600f6.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="210" height="210"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|6_{#order#}"><img src="{#image#}" width="210" height="210"></a>
                         <em>-{#defined2#}</em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|6_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">Купить сейчас</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|6_{#order#}">Купить сейчас</a>
                             <span>Продано</span>
                         </div>
                     </div>
@@ -611,14 +611,14 @@
                     <ul class="goods-list" marketStart="0" marketLength="6" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c056b4b5.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="295" height="295"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|7_{#order#}"><img src="{#image#}" width="295" height="295"></a>
                         <em>-{#defined2#}</em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|7_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">Купить сейчас</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|7_{#order#}">Купить сейчас</a>
                             <span>Продано</span>
                         </div>
                     </div>
@@ -629,14 +629,14 @@
                     <ul class="goods-list" marketStart="6" marketLength="" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c056b4b5.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="210" height="210"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|8_{#order#}"><img src="{#image#}" width="210" height="210"></a>
                         <em>-{#defined2#}</em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|8_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">Купить сейчас</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|8_{#order#}">Купить сейчас</a>
                             <span>Продано</span>
                         </div>
                     </div>
@@ -654,14 +654,14 @@
                     <ul class="goods-list" marketStart="0" marketLength="6" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c141eee1.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="295" height="295"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|9_{#order#}"><img src="{#image#}" width="295" height="295"></a>
                         <em>-{#defined2#}</em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|9_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">Купить сейчас</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|9_{#order#}">Купить сейчас</a>
                             <span>Продано</span>
                         </div>
                     </div>
@@ -672,14 +672,14 @@
                     <ul class="goods-list" marketStart="6" marketLength="" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c141eee1.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
-                        <a href="{#recommendUrl#}" target="_blank"><img src="{#image#}" width="210" height="210"></a>
+                        <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|10_{#order#}"><img src="{#image#}" width="210" height="210"></a>
                         <em>-{#defined2#}</em>
                     </div>
-                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div>
+                    <div class="goods-name"><a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|10_{#order#}">{#recommendName#}</a></div>
                     <div class="goods-price-btn">
                         <div class="goods-price"><em>${#jdPrice#}</em><del>${#normalPrice#}</del></div>
                         <div class="goods-btn">
-                            <a href="{#recommendUrl#}" target="_blank">Купить сейчас</a>
+                            <a href="{#recommendUrl#}" target="_blank" clstag="pageclick|keycount|pageclick|keycount|nov_en_blackf_sale_201511253|10_{#order#}">Купить сейчас</a>
                             <span>Продано</span>
                         </div>
                     </div>
