--- a/overseas/h5/home_appliances.html
+++ b/overseas/h5/home_appliances.html
@@ -156,6 +156,12 @@
         .goods-list .btn-buy{background-color: #ffa401;color: #fff;font-size: 18px;font-weight: bold;width: 260px;height: 44px;line-height: 44px;text-align: center;}
         /* fixed */
         .menu-list-fix{position: fixed;top:0;width: 600px;height: 55px;background-color: #f25b00;margin: 0 auto;z-index: 22;}
+        /* winphone */
+        @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+            .menu-list-fix{
+                position: relative;
+            }
+        }
     </style>
 </head>
 
