--- a/overseas/h5/phone.html
+++ b/overseas/h5/phone.html
@@ -137,9 +137,9 @@
         .wrap-menu-list li{display: -webkit-table-cell;display: -moz-table-cell;display: table-cell;vertical-align: middle;position: relative;width: 150px;text-align: center;height: 100%}
         .wrap-menu a{display: block;font-size: 18px;font-weight: bold;text-decoration: none;color: #fff;width: 100%;height: 100%}
         .wrap-menu .icon{position: absolute;right: 0px;top:17px;height: 22px;width: 1px;background-color: #ffa401;}
-        .wrap-menu-1,.wrap-menu-3{padding-top: 17px;}
+        .wrap-menu-1,.wrap-menu-2,.wrap-menu-3{padding-top: 17px;}
         .wrap-menu-3{letter-spacing: -1px;}
-        .wrap-menu-2,.wrap-menu-4{padding-top: 4px;}
+        .wrap-menu-4{padding-top: 4px;}
         .wrap-menu-list .active{background-color: #ffa401;}
         .goodsList-block{margin-bottom: 27px;}
         .floor-title{text-align: center;font-size: 22px;font-weight: bold;color: #fff;background-color: #ffa401;width: 600px;height: 42px;line-height: 42px;margin: 0 auto 10px;}
@@ -168,15 +168,15 @@
 <body>
 <div class="wrapper">
 <header class="banner">
-    <img src="http://img11.360buyimg.com/cms/jfs/t2221/31/1533482135/52456/8548bc7a/5666c627N00786059.jpg" width="640" height="494">
+    <img src="http://img12.360buyimg.com/cms/jfs/t1927/206/1644654025/36918/19868d3d/5665486bN22f70cdb.jpg" width="640" height="397">
 </header>
 <!-- S 导航 -->
 <nav class="wrap-menu">
     <ul class="wrap-menu-list">
-        <li class="wrap-menu-1 active"><a href="#flr1">Телевизоры<span class="icon"></span></a></li>
-        <li class="wrap-menu-2"><a href="#flr2">Бытовая техника<span class="icon"></span></a></li>
-        <li class="wrap-menu-3"><a href="#flr3">Всё для кухни<span class="icon"></span></a></li>
-        <li class="wrap-menu-4"><a href="#flr4">Красота и здоровье</a></li>
+        <li class="wrap-menu-1 active"><a href="#flr1">Смартфоны<span class="icon"></span></a></li>
+        <li class="wrap-menu-2"><a href="#flr2">Планшеты<span class="icon"></span></a></li>
+        <li class="wrap-menu-3"><a href="#flr3">Аксессуары<span class="icon"></span></a></li>
+        <li class="wrap-menu-4"><a href="#flr4">Цифровая техника</a></li>
     </ul>
 </nav>
 <!-- E 导航 -->
@@ -184,36 +184,36 @@
 <!--s 常规商品楼层-->
 <section class="goodsList-block" id="flr1">
     <div class="floor-title">
-        <h2 class="flr-hd-1 flr-hd">Телевизоры</h2>
+        <h2 class="flr-hd-1 flr-hd">Смартфоны</h2>
     </div>
-    <ul id="list1" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666992bd729d.js" marketonload="xmlLoad(1);">
+    <ul id="list1" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a336b1401.js" marketonload="xmlLoad(1);">
     </ul>
 </section>
 <!--e 常规商品楼层-->
 <!--s 常规商品楼层-->
 <section class="goodsList-block" id="flr2">
     <div class="floor-title">
-        <h2 class="flr-hd-2 flr-hd">Бытовая техника</h2>
+        <h2 class="flr-hd-2 flr-hd">Планшеты</h2>
     </div>
-    <ul id="list2" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156669950ad105.js" marketonload="xmlLoad(1);">
+    <ul id="list2" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a35533e21.js" marketonload="xmlLoad(1);">
     </ul>
 </section>
 <!--e 常规商品楼层-->
 <!--s 常规商品楼层-->
 <section class="goodsList-block" id="flr3">
     <div class="floor-title">
-        <h2 class="flr-hd-3 flr-hd">Всё для кухни</h2>
+        <h2 class="flr-hd-3 flr-hd">Аксессуары</h2>
     </div>
-    <ul id="list3" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1566699e88b892.js" marketonload="xmlLoad(1);">
+    <ul id="list3" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a38c42766.js" marketonload="xmlLoad(1);">
     </ul>
 </section>
 <!--e 常规商品楼层-->
 <!--s 常规商品楼层-->
 <section class="goodsList-block" id="flr4">
     <div class="floor-title">
-        <h2 class="flr-hd-4 flr-hd">Красота и здоровье</h2>
+        <h2 class="flr-hd-4 flr-hd">Цифровая техника</h2>
     </div>
-    <ul id="list4" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156669a1731268.js" marketonload="xmlLoad(1);">
+    <ul id="list4" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a3a746a3d.js" marketonload="xmlLoad(1);">
     </ul>
 </section>
 <!--e 常规商品楼层-->
@@ -301,12 +301,12 @@
                 $(item).attr({
                     "href": "#",
                     "oncick": "window.activity.gotoProductDetail('detail', '" + spuId +"')",
-                    "clstag": "pageclick|keycount|nov_app_blackf_201511245|"+(index+1)
+                    "clstag": "pageclick|keycount|2016new_year_ru_app_phone_2015120213|"+(index+1)
                 })
             })
         }else{
             $.each($('[hasclstag]'), function (index,item){
-                $(item).attr('clstag', 'pageclick|keycount|nov_m_blackf_201511244|'+(index+1));
+                $(item).attr('clstag', 'pageclick|keycount|2016new_year_ru_m_phone_201512028|'+(index+1));
             })
         };
         //arrival判断
@@ -344,7 +344,7 @@
             });
             $('.wrap-menu-list li').each(function(i){
                 $(this).click(function(e){
-                    /*window.scrollTo(0,$('.goodsList-block').eq(i).offset().top-60);
+                   /* window.scrollTo(0,$('.goodsList-block').eq(i).offset().top-60);
                     e.stopPropagation();
                     return false;*/
                 });
@@ -355,13 +355,6 @@
         $(window).scroll(function(){
             detecCoupon();
         }).trigger('scroll')
-        /**
-         **e 样式显示相关代码
-         */
-            //JA埋点规则
-        $.each($('[hasclstag]'), function (index,item){
-            $(item).attr('clstag', 'pageclick|keycount|2016new_year_ru_app_2015120212|'+(index+1));
-        })
     }
 </script>
 
