--- a/overseas/h5/home_appliances.html
+++ b/overseas/h5/home_appliances.html
@@ -27,12 +27,14 @@
             -webkit-touch-callout: none;
             font-family: Arial, Helvetica;
             overflow-x: hidden;
+            width: 100%;
         }
 
         body {
             font-size: 16px;
             -webkit-tap-highlight-color: transparent;
-            overflow-x: hidden
+            overflow-x: hidden;
+            width: 100%;
         }
 
         body, p, pre, h1, h2, h3, h4, h5, h6, dl, dd, ul, ol, form, input, textarea, th, td, select {
