--- a/overseas/h5/home_appliances.html
+++ b/overseas/h5/home_appliances.html
@@ -289,16 +289,14 @@
     /* 数据源加载完毕执行的code */
     function marketRendered(){
         var tmpHeight = 0;
-        alert($('body').height());
         //楼层高度
         $('.goodsList-block').each(function(i,k){
             var row = Math.ceil($(k).find('li').length/2);
             $(k).css('height',row*466+52);
             tmpHeight+=row*466+52;
         })
-        $('.wrapper').css({'height':(tmpHeight+494+55+39+27*3),'overflow':'hidden'});
-        $('body').height((tmpHeight+494+55+39+27*3)*$(window).width()/640).css('overflow-y','hidden')
-        alert($('body').height());
+        $('.wrapper').css({'height':(tmpHeight+494+55+39+27*4),'overflow':'hidden'});
+        $('body').height((tmpHeight+494+55+39+27*4)*$(window).width()/640).css('overflow-y','hidden');
         //链接地址拼接
         function isInApp(){
             var link = location.href;
