--- a/overseas/h5/home_appliances.html
+++ b/overseas/h5/home_appliances.html
@@ -144,7 +144,7 @@
         .wrap-menu-3{letter-spacing: -1px;}
         .wrap-menu-2,.wrap-menu-4{padding-top: 4px;}
         .wrap-menu-list .active{background-color: #ffa401;}
-        .goodsList-block{margin-bottom: 27px;}
+        .goodsList-block{margin-bottom: 27px;position: relative;}
         .floor-title{text-align: center;font-size: 22px;font-weight: bold;color: #fff;background-color: #ffa401;width: 600px;height: 42px;line-height: 42px;margin: 0 auto 10px;}
         .goods-list{padding: 10px 0 0 10px;width: 590px;margin: 0 auto 0;background-color: #ffa401;}
         .goods-list li{float: left;width: 284px;margin: 0 10px 10px 0;height: 456px;background-color: #fff;}
@@ -170,56 +170,56 @@
 
 <body>
 <div class="wrapper">
-<header class="banner">
-    <img src="http://img11.360buyimg.com/cms/jfs/t2221/31/1533482135/52456/8548bc7a/5666c627N00786059.jpg" width="640" height="494">
-</header>
-<!-- S 导航 -->
-<nav class="wrap-menu">
-    <ul class="wrap-menu-list">
-        <li class="wrap-menu-1 active"><a href="#flr1">Телевизоры<span class="icon"></span></a></li>
-        <li class="wrap-menu-2"><a href="#flr2">Бытовая техника<span class="icon"></span></a></li>
-        <li class="wrap-menu-3"><a href="#flr3">Всё для кухни<span class="icon"></span></a></li>
-        <li class="wrap-menu-4"><a href="#flr4">Красота и здоровье</a></li>
-    </ul>
-</nav>
-<!-- E 导航 -->
+    <header class="banner">
+        <img src="http://img11.360buyimg.com/cms/jfs/t2221/31/1533482135/52456/8548bc7a/5666c627N00786059.jpg" width="640" height="494">
+    </header>
+    <!-- S 导航 -->
+    <nav class="wrap-menu">
+        <ul class="wrap-menu-list">
+            <li class="wrap-menu-1 active"><a href="#flr1">Телевизоры<span class="icon"></span></a></li>
+            <li class="wrap-menu-2"><a href="#flr2">Бытовая техника<span class="icon"></span></a></li>
+            <li class="wrap-menu-3"><a href="#flr3">Всё для кухни<span class="icon"></span></a></li>
+            <li class="wrap-menu-4"><a href="#flr4">Красота и здоровье</a></li>
+        </ul>
+    </nav>
+    <!-- E 导航 -->
 
-<!--s 常规商品楼层-->
-<section class="goodsList-block" id="flr1">
-    <div class="floor-title">
-        <h2 class="flr-hd-1 flr-hd">Телевизоры</h2>
-    </div>
-    <ul id="list1" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666992bd729d.js" marketonload="xmlLoad(1);">
-    </ul>
-</section>
-<!--e 常规商品楼层-->
-<!--s 常规商品楼层-->
-<section class="goodsList-block" id="flr2">
-    <div class="floor-title">
-        <h2 class="flr-hd-2 flr-hd">Бытовая техника</h2>
-    </div>
-    <ul id="list2" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156669950ad105.js" marketonload="xmlLoad(1);">
-    </ul>
-</section>
-<!--e 常规商品楼层-->
-<!--s 常规商品楼层-->
-<section class="goodsList-block" id="flr3">
-    <div class="floor-title">
-        <h2 class="flr-hd-3 flr-hd">Всё для кухни</h2>
-    </div>
-    <ul id="list3" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1566699e88b892.js" marketonload="xmlLoad(1);">
-    </ul>
-</section>
-<!--e 常规商品楼层-->
-<!--s 常规商品楼层-->
-<section class="goodsList-block" id="flr4">
-    <div class="floor-title">
-        <h2 class="flr-hd-4 flr-hd">Красота и здоровье</h2>
-    </div>
-    <ul id="list4" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156669a1731268.js" marketonload="xmlLoad(1);">
-    </ul>
-</section>
-<!--e 常规商品楼层-->
+    <!--s 常规商品楼层-->
+    <section class="goodsList-block" id="flr1">
+        <div class="floor-title">
+            <h2 class="flr-hd-1 flr-hd">Телевизоры</h2>
+        </div>
+        <ul id="list1" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666992bd729d.js" marketonload="xmlLoad(1);">
+        </ul>
+    </section>
+    <!--e 常规商品楼层-->
+    <!--s 常规商品楼层-->
+    <section class="goodsList-block" id="flr2">
+        <div class="floor-title">
+            <h2 class="flr-hd-2 flr-hd">Бытовая техника</h2>
+        </div>
+        <ul id="list2" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156669950ad105.js" marketonload="xmlLoad(1);">
+        </ul>
+    </section>
+    <!--e 常规商品楼层-->
+    <!--s 常规商品楼层-->
+    <section class="goodsList-block" id="flr3">
+        <div class="floor-title">
+            <h2 class="flr-hd-3 flr-hd">Всё для кухни</h2>
+        </div>
+        <ul id="list3" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1566699e88b892.js" marketonload="xmlLoad(1);">
+        </ul>
+    </section>
+    <!--e 常规商品楼层-->
+    <!--s 常规商品楼层-->
+    <section class="goodsList-block" id="flr4">
+        <div class="floor-title">
+            <h2 class="flr-hd-4 flr-hd">Красота и здоровье</h2>
+        </div>
+        <ul id="list4" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156669a1731268.js" marketonload="xmlLoad(1);">
+        </ul>
+    </section>
+    <!--e 常规商品楼层-->
 
 </div>
 <!--s 常规商品楼层模板-->
@@ -243,27 +243,8 @@
     </li>
 </script>
 <!--end of 常规商品楼层模板-->
-
-
-
-<!--end of GTM 埋点  *还有一小段在xiaomi.js中*-->
-<script type="text/javascript">
-    if(window.google_tag_params){
-        dataLayer = [{
-            'google_tag_params': window.google_tag_params
-        }];
-    }
-</script>
-<!-- Google Tag Manager -->
-<noscript>
-    <iframe src="//www.googletagmanager.com/ns.html?id=GTM-WFSLVN"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-<!--end of GTM 埋点-->
-
 <script src="http://acen.jd.com/h5/topActivity/media/js/lib/zepto-1.1.6.min.js"></script>
 <script src="http://acsten.jd.com/static/market-1.0.0.min.js"></script>
-<!--<script src="../media/js/new_year.js"></script>-->
 <script>
     $(function(){
         //激活ios active状态
@@ -295,8 +276,6 @@
             $(k).css('height',row*466+52);
             tmpHeight+=row*466+52;
         })
-        $('.wrapper').css({'height':(tmpHeight+494+55+39+27*4),'overflow':'hidden'});
-
         //链接地址拼接
         function isInApp(){
             var link = location.href;
@@ -352,12 +331,13 @@
             $('.wrap-menu-list li').each(function(i){
                 $(this).click(function(e){
                     /*window.scrollTo(0,$('.goodsList-block').eq(i).offset().top-60);
-                    e.stopPropagation();
-                    return false;*/
+                     e.stopPropagation();
+                     return false;*/
                 });
             });
             if(navigator.userAgent.toLowerCase().indexOf('windows phone')>=0){
-                $('body').height((tmpHeight+494+55+39+27*4)*$(window).width()/640).css({'overflow-y':'hidden','position':'relative'});
+                $('body').height((tmpHeight+494+55+39+27*4)*$(window).width()/640).css({'overflow-y':'hidden'});
+                $('.wrapper').css({'height':(tmpHeight+494+55+39+27*4),'overflow':'hidden'});
             }
         }
 
@@ -374,6 +354,24 @@
         })
     }
 </script>
+
+
+<!--end of GTM 埋点  *还有一小段在xiaomi.js中*-->
+<script type="text/javascript">
+    if(window.google_tag_params){
+        dataLayer = [{
+            'google_tag_params': window.google_tag_params
+        }];
+    }
+</script>
+<!-- Google Tag Manager -->
+<noscript>
+    <iframe src="//www.googletagmanager.com/ns.html?id=GTM-WFSLVN"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!--end of GTM 埋点-->
+
+
 
 
 <!--start of JA埋点-->
